Add 3d `Server` visualizer command to `metalctl`

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -22,6 +22,7 @@ path = [
     "hack/**",
     "package.json",
     "package-lock.json",
+    "internal/cmd/visualizer/index.html",
 ]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2024 SAP SE or an SAP affiliate company and IronCore contributors"
