--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dylib
 bin/*
 Dockerfile.cross
+.DS_Store
 
 # Test binary, built with `go test -c`
 *.test
@@ -30,4 +31,5 @@ go.work
 node_modules/
 docs/.vitepress/cache/*
 docs/.vitepress/dist/*
+.vitepress/
 .cache
