feat: Implement BMCSettingsSet controller with reconciliation logic
- Added BMCSettingsSetReconciler to manage BMCSettingsSet resources.
- Implemented reconciliation logic for creating, updating, and deleting BMCSettings based on BMC resources.
- Introduced finalizer handling for BMCSettingsSet to manage cleanup during deletion.
- Added methods to handle owned BMCSettings and update their status based on the reconciliation state.
- Implemented logic to create missing BMCSettings and delete orphaned ones.
- Added tests for BMCSettingsSet controller to ensure correct reconciliation behavior.

test: Add unit tests for BMCSettingsSet controller

- Created comprehensive tests for BMCSettingsSet controller to validate reconciliation logic.
- Ensured correct behavior when BMC resources are created, updated, or deleted.
- Verified that BMCSettings are generated correctly based on BMC labels.
- Added tests for updating BMCSettingsSet and ensuring status updates are reflected.

chore: Update test suite to include BMCSettingsSet reconciler

- Modified suite_test.go to register BMCSettingsSetReconciler with the test manager.
- Ensured all resources are cleaned up after tests, including BMCSettingsSet.

fix: Update BMCSettings webhook to include BMCSettingsTemplate

- Refactored BMCSettingsSpec to include BMCSettingsTemplate for better structure.
- Updated webhook tests to validate the new structure of BMCSettings resources.

--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -52,3 +52,10 @@ resources:
 - biossettings_editor_role.yaml
 - biossettings_viewer_role.yaml
 
+# For each CRD, "Admin", "Editor" and "Viewer" roles are scaffolded by
+# default, aiding admins in cluster management. Those roles are
+# not used by the metal-operator itself. You can comment the following lines
+# if you do not want those helpers be installed with your Project.
+- bmcsettingsset_admin_role.yaml
+- bmcsettingsset_editor_role.yaml
+- bmcsettingsset_viewer_role.yaml
