--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -16,6 +16,7 @@ resources:
 - bases/metal.ironcore.dev_biosversionsets.yaml
 - bases/metal.ironcore.dev_bmcversionsets.yaml
 - bases/metal.ironcore.dev_biossettingssets.yaml
+- bases/metal.ironcore.dev_bmcsettingssets.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
