--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -38,6 +38,7 @@ rules:
   - bmcs
   - bmcsecrets
   - bmcsettings
+  - bmcsettingssets
   - bmcversions
   - bmcversionsets
   - endpoints
@@ -64,6 +65,7 @@ rules:
   - bmcs/finalizers
   - bmcsecrets/finalizers
   - bmcsettings/finalizers
+  - bmcsettingssets/finalizers
   - bmcversions/finalizers
   - bmcversionsets/finalizers
   - endpoints/finalizers
@@ -83,6 +85,7 @@ rules:
   - bmcs/status
   - bmcsecrets/status
   - bmcsettings/status
+  - bmcsettingssets/status
   - bmcversions/status
   - bmcversionsets/status
   - endpoints/status
