adds mandatory flags for controller-manager in e2e tests

--- a/config/e2e-metrics-validation/manager_args_patch.yaml
+++ b/config/e2e-metrics-validation/manager_args_patch.yaml
@@ -3,7 +3,17 @@
   path: /spec/template/spec/containers/0/args/-
   value: --probe-os-image=linux
 
+# Add the --probe-image argument for controller-manager
+- op: add
+  path: /spec/template/spec/containers/0/args/-
+  value: --probe-image=linux
+
 # Add the --registry-url argument for the controller-manager
 - op: add
   path: /spec/template/spec/containers/0/args/-
   value: --registry-url=http://localhost:30000
+
+# Add the --bmc-tools-image argument for controller-manager
+- op: add
+  path: /spec/template/spec/containers/0/args/-
+  value: --bmc-tools-image=linux
