--- a/config/crd/bases/metal.ironcore.dev_servermaintenances.yaml
+++ b/config/crd/bases/metal.ironcore.dev_servermaintenances.yaml
@@ -73,6 +73,15 @@ spec:
                     description: Parameters specify the parameters to be used for
                       rendering the boot configuration.
                     properties:
+                      bootType:
+                        default: Oneoff
+                        description: |-
+                          BootType specifies the type of boot configuration.
+                          It can be either "Oneoff" or "Continueous". If not specified, it defaults to "Oneoff".
+                        enum:
+                        - Oneoff
+                        - Continueous
+                        type: string
                       ignitionSecretRef:
                         description: |-
                           IgnitionSecretRef is a reference to the Kubernetes Secret object that contains
