--- a/config/samples/metal_v1alpha1_servermaintenanceset.yaml
+++ b/config/samples/metal_v1alpha1_servermaintenanceset.yaml
@@ -2,8 +2,15 @@ apiVersion: metal.ironcore.dev/v1alpha1
 kind: ServerMaintenanceSet
 metadata:
   labels:
-    app.kubernetes.io/name: metal-operator
+    app.kubernetes.io/name: servermaintenanceset
+    app.kubernetes.io/part-of: metal-operator
     app.kubernetes.io/managed-by: kustomize
+    app.kubernetes.io/created-by: metal-operator
   name: servermaintenanceset-sample
 spec:
-  # TODO(user): Add fields here
+  serverSelector:
+    matchLabels:
+      manufacturer: "dell"
+  serverMaintenanceTemplate:
+    policy: OwnerApproval
+    serverPower: "Off"
