Bmc redfish reset (#475)
* Add BMC reset functionality and new annotation for forced reset

* add BMCFailureResetDelay option for handling persistent connection failures

* fixes lint issues

* rename BMC reset annotation for clarity and update controller logic

* check for http status code

* increases ssh timeout

* adds timeout to ssh cmd run

* use k8s job to run bmc reset cmd

* improves reset handling

* adds tests

* fixes dockerfile copy

* adds missing license info

* adds bmc conditions

* adds more bmc tests

* fixes lint error

* make generate

* adds mandatory flags for controller-manager in e2e tests

* enhance BMC reset functionality and improve flag naming conventions

* fixes Dockerfile to improve bmctools build process and variable usage

* adds bmc reset via redfish only

* removes redundant comment and updates BMC state documentation

* refactor: clean up imports and remove unused code in BMC controller tests

* refactor: remove unused BMC webhook and related test files

* make generate && make docs && make helm

* run codeine

--- a/config/e2e-metrics-validation/kustomization.yaml
+++ b/config/e2e-metrics-validation/kustomization.yaml
@@ -2,7 +2,7 @@ resources:
 - ../default
 
 patches:
-#  --registry-url and --probe-os-image are mandatory flags.
+#  --registry-url, --probe-os-image and --probe-image are mandatory flags.
 # The following patch will add value for above flags
 - path: manager_args_patch.yaml
   target:
