--- a/config/e2e-metrics-validation/manager_args_patch.yaml
+++ b/config/e2e-metrics-validation/manager_args_patch.yaml
@@ -3,6 +3,11 @@
   path: /spec/template/spec/containers/0/args/-
   value: --probe-os-image=linux
 
+# Add the --probe-image argument for controller-manager
+- op: add
+  path: /spec/template/spec/containers/0/args/-
+  value: --probe-image=linux
+
 # Add the --registry-url argument for the controller-manager
 - op: add
   path: /spec/template/spec/containers/0/args/-
