--- a/config/samples/metal_v1alpha1_biosversion.yaml
+++ b/config/samples/metal_v1alpha1_biosversion.yaml
@@ -6,10 +6,11 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: biosversion-sample
 spec:
-  version: "2.22.1"
+  version: "U59 v2.34 (10/04/2024)"
   image:
-    URI: "https://repo.eu-de-1.cloud.sap/hw-firmware/dell/poweredge-r640/BIOS_M73JJ_WN64_2.22.1.EXE"
+    URI: "https://foo-2.34_10_04_2024.signed.flash"
     transferProtocol: "HTTPS"
+  updatePolicy: Normal
   serverRef:
-    name: node005-ap046-system-0 
+    name: endpoint-sample-hpe-system-0
   serverMaintenancePolicy: OwnerApproval
