Update sample resources to valid specs

--- a/config/samples/metal_v1alpha1_biossettingsset.yaml
+++ b/config/samples/metal_v1alpha1_biossettingsset.yaml
@@ -13,9 +13,9 @@ spec:
       - name: abc
         priority: 10
         settings:
-          abc: Enabled
+          abc: "Disabled"
   serverSelector:
     matchLabels: 
-      manufacturer: "dell"
+      manufacturer: "Contoso"
 
 
