--- a/config/samples/metal_v1alpha1_bmcversion.yaml
+++ b/config/samples/metal_v1alpha1_bmcversion.yaml
@@ -1,18 +1,14 @@
 apiVersion: metal.ironcore.dev/v1alpha1
 kind: BMCVersion
 metadata:
-  Annotations:
-    # ForceUpdateAnnotation is used to force update the BMCVersion even if it is in progress.
-    metal.ironcore.dev/force-update: "true"
-    metal.ironcore.dev/force-delete: "true"
   labels:
     app.kubernetes.io/name: metal-operator
     app.kubernetes.io/managed-by: kustomize
   name: bmcversion-sample
 spec:
-  version: "v2.34 (10/04/2024)"
+  version: "2.45.455b66-rev4"
   image:
-    URI: "https://fooBMC-2.34_10_04_2024.signed.flash"
+    URI: "2.45.455b66-rev4"
     transferProtocol: "HTTPS"
   updatePolicy: Normal
   bmcRef:
