--- a/config/crd/bases/metal.ironcore.dev_bmcsettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcsettings.yaml
@@ -15,7 +15,7 @@ spec:
   scope: Cluster
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .spec.bmcSettings.version
+    - jsonPath: .spec.version
       name: BMCVersion
       type: string
     - jsonPath: .status.state
@@ -23,9 +23,6 @@ spec:
       type: string
     - jsonPath: .spec.BMCRef.name
       name: BMCRef
-      type: string
-    - jsonPath: .spec.serverRef.name
-      name: ServerRef
       type: string
     name: v1alpha1
     schema:
