--- a/config/crd/bases/metal.ironcore.dev_servermaintenances.yaml
+++ b/config/crd/bases/metal.ironcore.dev_servermaintenances.yaml
@@ -70,14 +70,14 @@ spec:
                     default: Persistent
                     description: |-
                       BootType specifies the type of boot configuration.
-                      It can be either "Oneoff" or "Persistent". If not specified, it defaults to "Persistent".
+                      It can be either "OneOff" or "Persistent". If not specified, it defaults to "Persistent".
                       "Persistent" will set the configuration reboot the server before setting the server to the desired power state mentioned in spec.
 
-                      "Oneoff" will set the configuration to boot once. next boot-up will boot into default boot order.
+                      "OneOff" will set the configuration to boot once. next boot-up will boot into default boot order.
                       if power state mentioned in spec is "PowerOn", server will be powered on and will boot into the configuration.
                       if power state is "PowerOff", server will be powered off and will boot into the configuration on next power on.
                     enum:
-                    - Oneoff
+                    - OneOff
                     - Persistent
                     type: string
                   name:
@@ -156,8 +156,10 @@ spec:
             description: ServerMaintenanceStatus defines the observed state of a ServerMaintenance
             properties:
               bootOrderStatus:
-                description: BootOrder specifies the boot order of the server before
-                  maintenance.
+                description: |-
+                  BootOrderStatus specifies the boot order of the server before maintenance.
+                  is used to store the boot order of server before it is changed for maintenance.
+                  used only with BootType Persistent.
                 properties:
                   defaultBootOrder:
                     description: DefaultBootOrder specifies the default boot order
