--- a/config/crd/bases/metal.ironcore.dev_servers.yaml
+++ b/config/crd/bases/metal.ironcore.dev_servers.yaml
@@ -158,8 +158,6 @@ spec:
                   BootConfigurationRef is a reference to a BootConfiguration object that specifies
                   the boot configuration for this server. This field is optional and can be omitted
                   if no boot configuration is specified.
-                  This is used during initial provisioning of the server automatically.
-                  This is also used during maintenance if Maintenance needs server to be taken offline
                 properties:
                   apiVersion:
                     description: API version of the referent.
@@ -201,10 +199,77 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
+              bootOrder:
+                description: |-
+                  BootOrder specifies the boot order of the server.
+                  Deprecated: currently not supported.
+                items:
+                  description: BootOrder represents the boot order of the server.
+                  properties:
+                    device:
+                      description: Device is the device to boot from.
+                      type: string
+                    name:
+                      description: Name is the name of the boot device.
+                      type: string
+                    priority:
+                      description: Priority is the priority of the boot device.
+                      type: integer
+                  required:
+                  - device
+                  - name
+                  - priority
+                  type: object
+                type: array
               indicatorLED:
                 description: IndicatorLED specifies the desired state of the server's
                   indicator LED.
                 type: string
+              maintenanceBootConfigurationRef:
+                description: |-
+                  MaintenanceBootConfigurationRef is a reference to a BootConfiguration object that specifies
+                  the boot configuration for this server during maintenance. This field is optional and can be omitted
+                properties:
+                  apiVersion:
+                    description: API version of the referent.
+                    type: string
+                  fieldPath:
+                    description: |-
+                      If referring to a piece of an object instead of an entire object, this string
+                      should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2].
+                      For example, if the object reference is to a container within a pod, this would take on a value like:
+                      "spec.containers{name}" (where "name" refers to the name of the container that triggered
+                      the event) or if no container name is specified "spec.containers[2]" (container with
+                      index 2 in this pod). This syntax is chosen only to have some well-defined way of
+                      referencing a part of an object.
+                    type: string
+                  kind:
+                    description: |-
+                      Kind of the referent.
+                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+                    type: string
+                  name:
+                    description: |-
+                      Name of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                    type: string
+                  namespace:
+                    description: |-
+                      Namespace of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+                    type: string
+                  resourceVersion:
+                    description: |-
+                      Specific resourceVersion to which this reference is made, if any.
+                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency
+                    type: string
+                  uid:
+                    description: |-
+                      UID of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
               power:
                 description: Power specifies the desired power state of the server.
                 type: string
