--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,5 @@ jobs:
 
       - name: Running Tests
         run: |
-          sudo apt-get update && sudo apt-get install -y psutils
-          go mod tidy
-          make test
+          sudo --preserve-env=GOROOT,GOPATH,PATH go mod tidy
+          sudo --preserve-env=GOROOT,GOPATH,PATH make test
