Add hardware detail extraction to `metalprobe` (inventory) (#452)
* Initial inventory

- rebased to main

* Fix tests on darwin

* Ignore `networkctl` errors in GH test runs for now

---------

Co-authored-by: Andreas Fritzler <andreas.fritzler@sap.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,5 @@ jobs:
 
       - name: Running Tests
         run: |
-          go mod tidy
-          make test
+          sudo --preserve-env=GOROOT,GOPATH,PATH go mod tidy
+          sudo --preserve-env=GOROOT,GOPATH,PATH make test
