metalprobe: switch from networkctl to lldpd
- parse `lldpctl -f json` data
- add tests for `lldpctl -f json` data
  - add data in test/data
  - add testdata to REUSE.toml
- re-run the lldp discovery in every iteration
- update metalprobe docker to start lldpd before starting metalprobe
  - no longer using distroless nonroot, discovery needs root privileges
  - add launch script
  - exec `/metalprobe $args`
- fix github workflows
  - install lldpd in test.yml

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -23,6 +23,7 @@ path = [
     "package.json",
     "package-lock.json",
     "internal/cmd/visualizer/index.html",
+    "test/data/*.json"
 ]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2024 SAP SE or an SAP affiliate company and IronCore contributors"
