workflows: clarify test names

--- a/.github/workflows/test-chart.yml
+++ b/.github/workflows/test-chart.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test-e2e:
-    name: Run on Ubuntu
+    name: Run test chart on Ubuntu
     runs-on: ubuntu-latest
     steps:
       - name: Clone the code
