--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   test:
-    name: Run on Ubuntu
+    name: Run tests on Ubuntu
     runs-on: ubuntu-latest
     steps:
       - name: Clone the code
