Switch from `networkctl` to `lldpd` in `metalprobe` (#512)
* workflows: clarify test names

* metalprobe: switch from networkctl to lldpd

- parse `lldpctl -f json` data
- add tests for `lldpctl -f json` data
  - add data in test/data
  - add testdata to REUSE.toml
- re-run the lldp discovery in every iteration
- update metalprobe docker to start lldpd before starting metalprobe
  - no longer using distroless nonroot, discovery needs root privileges
  - add launch script
  - exec `/metalprobe $args`
- fix github workflows
  - install lldpd in test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,18 @@ on:
 
 jobs:
   test:
-    name: Run on Ubuntu
+    name: Run tests on Ubuntu
     runs-on: ubuntu-latest
     steps:
+      - name: Install lldpd
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y lldpd
+
+      - name: Start lldpd
+        run: |
+          sudo systemctl start lldpd
+
       - name: Clone the code
         uses: actions/checkout@v5
 
