De-normalize tests and ensure clean state before each `It()` run
- Use `RunnableFunc` to start registry in `manager`
- Denormalize tests by ensuring each `It()` block leaves the API server
  clean

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Running Tests
         run: |
           sudo --preserve-env=GOROOT,GOPATH,PATH go mod tidy
-          sudo --preserve-env=GOROOT,GOPATH,PATH make test
+          sudo --preserve-env=GOROOT,GOPATH,PATH make test-only
