--- a/config/crd/bases/metal.ironcore.dev_bmcs.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcs.yaml
@@ -255,6 +255,10 @@ spec:
                   - type
                   type: object
                 type: array
+              eventsSubscriptionLink:
+                description: EventsSubscriptionLink is the link to the events subscription
+                  of the bmc.
+                type: string
               firmwareVersion:
                 description: FirmwareVersion is the version of the firmware currently
                   running on the BMC.
@@ -277,6 +281,10 @@ spec:
                 type: string
               manufacturer:
                 description: Manufacturer is the name of the BMC manufacturer.
+                type: string
+              metricsReportSubscriptionLink:
+                description: MetricsReportSubscriptionLink is the link to the metrics
+                  report subscription of the bmc.
                 type: string
               model:
                 description: Model is the model number or name of the BMC.
