--- a/config/crd/bases/metal.ironcore.dev_bmcs.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcs.yaml
@@ -89,7 +89,7 @@ spec:
                 description: |-
                   AdminUserRef is a reference to the Kubernetes Secret object that contains the credentials to access the BMC.
                   This secret is used for administrative access to the BMC and may include elevated privileges.
-                  It will replqce the BMCSecretRef for administrative operations.
+                  It will replace the BMCSecretRef for administrative operations.
                 properties:
                   name:
                     default: ""
@@ -228,9 +228,8 @@ spec:
                       type: object
                       x-kubernetes-map-type: atomic
                     bmcSecretRef:
-                      description: |-
-                        LocalObjectReference contains enough information to let you locate the
-                        referenced object inside the same namespace.
+                      description: if not set, the operator will generate a secure
+                        password based on BMC manufacturer requirements.
                       properties:
                         name:
                           default: ""
