renames to BMCUser; uses new test setup

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -47,6 +47,7 @@ rules:
   - bmcs
   - bmcsecrets
   - bmcsettings
+  - bmcusers
   - bmcversions
   - bmcversionsets
   - endpoints
@@ -66,7 +67,6 @@ rules:
 - apiGroups:
   - metal.ironcore.dev
   resources:
-  - accounts/finalizers
   - biossettings/finalizers
   - biossettingssets/finalizers
   - biosversions/finalizers
@@ -74,6 +74,7 @@ rules:
   - bmcs/finalizers
   - bmcsecrets/finalizers
   - bmcsettings/finalizers
+  - bmcusers/finalizers
   - bmcversions/finalizers
   - bmcversionsets/finalizers
   - endpoints/finalizers
@@ -86,7 +87,6 @@ rules:
 - apiGroups:
   - metal.ironcore.dev
   resources:
-  - accounts/status
   - biossettings/status
   - biossettingssets/status
   - biosversions/status
@@ -94,6 +94,7 @@ rules:
   - bmcs/status
   - bmcsecrets/status
   - bmcsettings/status
+  - bmcusers/status
   - bmcversions/status
   - bmcversionsets/status
   - endpoints/status
