add test yaml file to reuse.

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -23,7 +23,8 @@ path = [
     "package.json",
     "package-lock.json",
     "internal/cmd/visualizer/index.html",
-    "test/data/*.json"
+    "test/data/*.json",
+    "test/data/*.yaml"
 ]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2024 SAP SE or an SAP affiliate company and IronCore contributors"
