--- a/.golangci.yml
+++ b/.golangci.yml
@@ -34,6 +34,9 @@ linters:
           - dupl
           - lll
         path: bmc/*
+      - linters:
+          - goconst
+        path: .*_test\.go$
     paths:
       - third_party$
       - builtin$
