Refactor `BIOSSettings` reconciler

--- a/config/crd/bases/metal.ironcore.dev_biossettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettings.yaml
@@ -204,6 +204,8 @@ spec:
                   type: object
                 type: array
               flowState:
+                description: FlowState is a list of individual BIOSSettings operation
+                  flows.
                 items:
                   properties:
                     conditions:
