--- a/hack/api-reference/config.json
+++ b/hack/api-reference/config.json
@@ -1,12 +1,16 @@
 {
-  "hideMemberFields": [
-    "TypeMeta"
-  ],
-  "hideTypePatterns": [
-    "ParseError$",
-    "List$"
-  ],
-  "externalPackages": [
+  "processor": {
+    "ignoreFields": [
+      "TypeMeta$"
+    ],
+    "ignoreTypes": [
+      "ParseError$",
+      "List$"
+    ]
+  },
+  "render": {
+    "kubernetesVersion": "1.34",
+    "externalPackages": [
     {
       "typeMatchPrefix": "^net/netip",
       "docsURLTemplate": "https://pkg.go.dev/net/netip#{{.TypeIdentifier}}"
@@ -24,9 +28,10 @@
       "docsURLTemplate": "https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.34/#{{lower .TypeIdentifier}}-{{arrIndex .PackageSegments -1}}-{{arrIndex .PackageSegments -2}}"
     }
   ],
-  "typeDisplayNamePrefixOverrides": {
-    "k8s.io/api/": "Kubernetes ",
-    "k8s.io/apimachinery/pkg/apis/": "Kubernetes "
-  },
-  "markdownDisabled": false
+    "typeDisplayNamePrefixOverrides": {
+      "k8s.io/api/": "Kubernetes ",
+      "k8s.io/apimachinery/pkg/apis/": "Kubernetes "
+    },
+    "markdownDisabled": false
+  }
 }
