--- a/.github/workflows/check-codegen.yml
+++ b/.github/workflows/check-codegen.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   check-codegen:
+    name: Run code generation checks
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v6
