--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   test-e2e:
-    name: Run test e2e on Ubuntu
+    name: Run test e2e
     runs-on: ubuntu-latest
     steps:
       - name: Clone the code
