Rename RotationPolicy to RotationPeriod in BMCUserSpec and update related references; remove unused RBAC roles and sample configurations

--- a/config/samples/metal_v1alpha1_bmcuser.yaml
+++ b/config/samples/metal_v1alpha1_bmcuser.yaml
@@ -9,7 +9,7 @@ spec:
   userName: admin
   roleID: "Administrator"
   description: "Administrator user"
-  rotationPolicy: 720h0m0s
+  rotationPeriod: 720h0m0s
   bmcSecretRef:
     name: bmc-secret-sample
   bmcRef:
