Add review instructions for agents

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -32,7 +32,8 @@ SPDX-License-Identifier = "Apache-2.0"
 [[annotations]]
 path = [
     "docs/**",
-    "README.md"
+    "README.md",
+    "AGENTS.md"
 ]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2024 SAP SE or an SAP affiliate company and IronCore contributors"
