Refactor BMCUser status to use metav1.Time for PasswordExpiration and update related logic

--- a/config/crd/bases/metal.ironcore.dev_bmcusers.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcusers.yaml
@@ -116,6 +116,7 @@ spec:
                 format: date-time
                 type: string
               passwordExpiration:
+                format: date-time
                 type: string
             type: object
         type: object
