Add `BMCSettingsSet` type and controller  (#471)
* feat: Implement BMCSettingsSet controller with reconciliation logic

- Added BMCSettingsSetReconciler to manage BMCSettingsSet resources.
- Implemented reconciliation logic for creating, updating, and deleting BMCSettings based on BMC resources.
- Introduced finalizer handling for BMCSettingsSet to manage cleanup during deletion.
- Added methods to handle owned BMCSettings and update their status based on the reconciliation state.
- Implemented logic to create missing BMCSettings and delete orphaned ones.
- Added tests for BMCSettingsSet controller to ensure correct reconciliation behavior.

test: Add unit tests for BMCSettingsSet controller

- Created comprehensive tests for BMCSettingsSet controller to validate reconciliation logic.
- Ensured correct behavior when BMC resources are created, updated, or deleted.
- Verified that BMCSettings are generated correctly based on BMC labels.
- Added tests for updating BMCSettingsSet and ensuring status updates are reflected.

chore: Update test suite to include BMCSettingsSet reconciler

- Modified suite_test.go to register BMCSettingsSetReconciler with the test manager.
- Ensured all resources are cleaned up after tests, including BMCSettingsSet.

fix: Update BMCSettings webhook to include BMCSettingsTemplate

- Refactored BMCSettingsSpec to include BMCSettingsTemplate for better structure.
- Updated webhook tests to validate the new structure of BMCSettings resources.

* feat: Add BMCSettingsSet CRD and associated RBAC roles; update API documentation and tests. To ensure make and lint works

* Update BMCSettingsSet controller to handle ServerMaintenanceRefs merging; adjust RBAC roles and CRD version

* refactor: Remove unnecessary equality checks and simplify ServerMaintenanceRefs filtering logic with clientutils.ListAndFilter

* refactor: Enhance BMCSettings handling by merging ServerMaintenanceRefs and simplifying patch logic

* refactor: Update BMCRef validation messa

--- a/config/crd/bases/metal.ironcore.dev_bmcsettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcsettings.yaml
@@ -47,7 +47,6 @@ spec:
           metadata:
             type: object
           spec:
-            description: BMCSettingsSpec defines the desired state of BMCSettings.
             properties:
               BMCRef:
                 description: BMCRef is a reference to a specific BMC to apply setting
@@ -65,7 +64,7 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
                 x-kubernetes-validations:
-                - message: serverRef is immutable
+                - message: BMCRef is immutable
                   rule: self == oldSelf
               serverMaintenancePolicy:
                 description: ServerMaintenancePolicy is a maintenance policy to be
@@ -120,6 +119,7 @@ spec:
                   should be applied.
                 type: string
             required:
+            - BMCRef
             - version
             type: object
           status:
