--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -47,6 +47,7 @@ rules:
   - bmcs
   - bmcsecrets
   - bmcsettings
+  - bmcsettingssets
   - bmcversions
   - bmcversionsets
   - endpoints
@@ -73,6 +74,7 @@ rules:
   - bmcs/finalizers
   - bmcsecrets/finalizers
   - bmcsettings/finalizers
+  - bmcsettingssets/finalizers
   - bmcversions/finalizers
   - bmcversionsets/finalizers
   - endpoints/finalizers
@@ -92,6 +94,7 @@ rules:
   - bmcs/status
   - bmcsecrets/status
   - bmcsettings/status
+  - bmcsettingssets/status
   - bmcversions/status
   - bmcversionsets/status
   - endpoints/status
