My actual changes only

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -48,6 +48,7 @@ rules:
   - bmcsecrets
   - bmcsettings
   - bmcsettingssets
+  - bmcusers
   - bmcversions
   - bmcversionsets
   - endpoints
@@ -75,6 +76,7 @@ rules:
   - bmcsecrets/finalizers
   - bmcsettings/finalizers
   - bmcsettingssets/finalizers
+  - bmcusers/finalizers
   - bmcversions/finalizers
   - bmcversionsets/finalizers
   - endpoints/finalizers
@@ -95,6 +97,7 @@ rules:
   - bmcsecrets/status
   - bmcsettings/status
   - bmcsettingssets/status
+  - bmcusers/status
   - bmcversions/status
   - bmcversionsets/status
   - endpoints/status
