--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -16,6 +16,7 @@ resources:
 - bases/metal.ironcore.dev_biosversionsets.yaml
 - bases/metal.ironcore.dev_bmcversionsets.yaml
 - bases/metal.ironcore.dev_biossettingssets.yaml
+- bases/metal.ironcore.dev_bmcusers.yaml
 - bases/metal.ironcore.dev_bmcsettingssets.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
@@ -38,6 +39,7 @@ patches:
 #- path: patches/cainjection_in_servers.yaml
 #- path: patches/cainjection_in_serverbootconfigurations.yaml
 #- path: patches/cainjection_in_serverclaims.yaml
+#- path: patches/cainjection_in_accounts.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
