Support for boot from Virtual Media - first draft

--- a/config/samples/metal_v1alpha1_serverclaim.yaml
+++ b/config/samples/metal_v1alpha1_serverclaim.yaml
@@ -17,4 +17,5 @@ spec:
   image: os-image:latest
   ignitionSecretRef:
     name: ignition-sample
+  bootMethod: PXE  # or VirtualMedia
   power: "On"
