--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -25,6 +25,9 @@ resources:
 - bmcuser_admin_role.yaml
 - bmcuser_editor_role.yaml
 - bmcuser_viewer_role.yaml
+- bmcuserset_admin_role.yaml
+- bmcuserset_editor_role.yaml
+- bmcuserset_viewer_role.yaml
 - bmcversionset_admin_role.yaml
 - bmcversionset_editor_role.yaml
 - bmcversionset_viewer_role.yaml
