--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -49,6 +49,7 @@ rules:
   - bmcsettings
   - bmcsettingssets
   - bmcusers
+  - bmcusersets
   - bmcversions
   - bmcversionsets
   - endpoints
@@ -77,6 +78,7 @@ rules:
   - bmcsettings/finalizers
   - bmcsettingssets/finalizers
   - bmcusers/finalizers
+  - bmcusersets/finalizers
   - bmcversions/finalizers
   - bmcversionsets/finalizers
   - endpoints/finalizers
@@ -98,6 +100,7 @@ rules:
   - bmcsettings/status
   - bmcsettingssets/status
   - bmcusers/status
+  - bmcusersets/status
   - bmcversions/status
   - bmcversionsets/status
   - endpoints/status
